feat: サインアップ機能追加、色々修正
